<resources>
    <string name="app_name">Shisu</string>
    <string name="log_out_user">Log out user</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="go_to_homepage">Go to Homepage</string>

    <string name="Login">Login</string>
    <string name="fp">Forgot Password</string>


    <!---navigation drawer content page-->
    <string name="DOJ">DOJ</string>
    <string name="status">Status</string>

    <string name="sponsor">Sponsor</string>
    <string name="downline">Downline</string>
    <string name="income">Income</string>
    <string name="WB">Wallet Ballance</string>
    <string name="BD">\nBinary Details</string>
    <string name="lefttree">Left</string>
    <string name="righttree">Right</string>
    <string name="Directtree">Direct</string>
    <string name="Purpletree">Purple</string>
    <string name="Greentree">Green</string>
    <string name="CFtree">C/F</string>
    <string name="Currenttree">Current</string>
    <string name="Totaltree">Total</string>
    <string name="kycstatus">Kyc Status</string>
    <string name="Photokyc">Photo</string>
    <string name="Addresskyc">Address</string>
    <string name="pankyc">Pan card</string>
    <string name="bankdetailskyc">Bank Details</string>
    <string name="idproffkyc">Identity Proof</string>
    <string name="kycuploadbtn">Kyc Upload</string>
    <string name="legendview">Legend</string>

    <string name="error_message">Some error occurs please try again !</string>

    <!---each Button name-->
    <string name="submitbutton">Submit</string>
    <string name="profilebtn">Profile</string>
    <string name="apply">SUBMIT</string>


    <!---bottom navigation -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_catalog">Payout Report</string>
    <string name="title_incentive">Summary</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!---Financial Manager Payout Report-->
    <string name="payid">Pay Id</string>

    <string name="totalincome">Total Income</string>
    <string name="selectpayid">Select Payid</string>
    <string name="cutofmonthtds">Cut Of Month</string>
    <string name="tdspercantage">TDS (%)</string>
    <!---payout report dialogbox-->
    <string name="cfl">CF/L</string>
    <string name="cfr">CF/R</string>
    <string name="curntl">Current L</string>
    <string name="curntr">Current R</string>
    <string name="totalL">Total L</string>
    <string name="totalR">Total R</string>
    <string name="flushpv">Flush PV</string>
    <string name="paindpv">Paid PV</string>
    <string name="pvincome">PV Income</string>
    <string name="dincome">Direct Income</string>
    <string name="RLTInc">RLT Inc</string>

    <string name="currency">Rs.</string>


    <!---Cureency wallete summary-->
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="pmi">Pair Matching Income</string>
    <string name="royalincome">Royalty Income</string>
    <string name="TDS">TDS</string>
    <string name="deduction">Deduction</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="acharge">Admin Charge</string>
    <!---Balance Available-->
    <string name="avlbal">Available Balance</string>
    <string name="ledbal">Ledger Balance</string>

    <!---dash board binery value string-->
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="community">Community</string>
    <string name="previous">Previous</string>
    <string name="current">Current</string>
    <string name="total">Total</string>
    <string name="purple">Purple</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="cf">C/F</string>
    <string name="direct">Direct</string>


    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="random_title">This is a Random Title</string>

    <string name="message">We are currently working on this feature and will launch soon.</string>
    <string name="title1">Coming</string>
    <string name="title2">Soon</string>
    <string name="enter_seq_pin">Enter Security Pin</string>
    <string name="credit">Credit</string>
    <string name="Deposit">Debit</string>
    <string name="available_bal">Available Balance</string>
    <string name="ledger_bal">Ledger Balance</string>
    <string name="direct_deposit">Direct Deposit</string>
    <string name="withdral">Withdrawal</string>
    <string name="direct_deduction">Direct Deduction</string>
    <string name="address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="select_state">Select State</string>
    <!-- <string name="enter_6_digit_pin_code">Enter 6 digit Zip code</string>-->
    <string name="enter_6_digit_pin_code">Enter Pincode</string>
    <string name="no_of_epin">No. of E-Pin</string>
    <string name="price">Price(₹)</string>
    <string name="amount">Amount(₹)</string>
    <string name="epin_no">E-Pin Number</string>
    <string name="enter_email">Enter E-mail</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="select_mode_of_payment">Select Mode of Payment</string>
    <string name="select_payment_date">Select Payment Date</string>
    <string name="select_bank_name">Select Bank Name</string>
    <string name="request_e_pin">Request E-Pin</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="proceed">Proceed</string>
    <string name="note">Note</string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="refrence_no">Refrence No</string>
    <string name="bank_name">Bank Name</string>
    <string name="payment_date">Select Payment Date</string>
    <string name="remark">Remark</string>
    <string name="make_payment">Make Payment</string>
    <string name="checkout">Checkout</string>
    <string name="shop_mpre">Shop More</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="level_details">Level Details</string>

</resources>

