<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/makePaymentRoot">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#F1EEEE"
        app:cardElevation="20dp"
        app:contentPadding="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorwhite"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp">


              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_yellow_box_layout"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/payment_mode_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:visibility="visible"
                             />

                    </RelativeLayout>

                </LinearLayout>

              </LinearLayout>

            <LinearLayout
                android:id="@+id/refrenceNoLL"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/refrenceNo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:layout_weight=".5"
                    android:background="@drawable/rectangle_yellow_box_layout"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center|left"
                    android:hint="@string/refrence_no"
                    android:paddingLeft="10dp"
                    android:paddingTop="4dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/colorblack"
                    android:textColorHint="@color/colorblack"
                    android:textSize="17dp">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bankNameLL"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/bankName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:layout_weight=".5"
                    android:background="@drawable/rectangle_yellow_box_layout"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center|left"
                    android:hint="@string/bank_name"
                    android:paddingLeft="10dp"
                    android:paddingTop="4dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/colorblack"
                    android:textColorHint="@color/colorblack"
                    android:textSize="17dp">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/paymentDate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:layout_weight=".5"
                    android:background="@drawable/rectangle_yellow_box_layout"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center|left"
                    android:hint="@string/payment_date"
                    android:drawableRight="@drawable/calender"
                    android:paddingLeft="10dp"
                    android:paddingTop="4dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/colorblack"
                    android:textColorHint="@color/colorblack"
                    android:textSize="17dp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/remark"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:layout_weight=".5"
                    android:background="@drawable/rectangle_yellow_box_layout"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center|left|top"
                    android:hint="@string/remark"
                    android:paddingLeft="10dp"
                    android:paddingTop="4dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/colorblack"
                    android:textColorHint="@color/colorblack"
                    android:textSize="17dp">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight=".55"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/makePayment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/rounded_corner_yellow_button"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="4dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="4dp"
                        android:text="@string/make_payment"
                        android:textColor="@color/colorwhite"
                        android:textSize="16dp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight=".45"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight=".5"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cancel"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/rounded_corner_red_button"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:text="@string/cancel"
                            android:textColor="@color/colorwhite"
                            android:textSize="16dp">

                        </TextView>
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>