<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tdsreport"
    android:background="@drawable/background_pagecolor"
    tools:context=".FinanacialReport.TDSReportFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:background="@color/toolbaarcolor"
            android:weightSum="4">


            <LinearLayout
                android:layout_marginRight="0.1dp"
                android:layout_marginLeft="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1.1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cutofmonthtds"
                    android:textSize="13dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="0.1dp"
                android:layout_marginRight="0.1dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1.1">
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/totalincomeheadertds"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="13dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/totalincome"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="0.1dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.8">
                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/tdspercantage"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="0.1dp"
                android:layout_marginRight="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tdsamountheader"
                    android:textSize="13dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="TDS AMt (₹)"/>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:elevation="15dp"
                app:cardMaxElevation="15dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tdsrecyclerview"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.cardview.widget.CardView>

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>